<resources>
    <string name="app_name">APPs</string>
    <string name="my_name">余夏蓉</string>
    <string name="my_num">42327021</string>
    <string name="happy_birthday">生日快乐</string>
    <string name="guan_gao">广告位招租</string>
    <string name="team_label">Team</string>
    <string name="_1_point">+1 POINT</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="reset">RESET</string>
    <string name="team_b">TEAM B</string>
    <string name="team_a">TEAM A</string>
    <string name="config">Config</string>
    <string name="set_rate">设置汇率</string>
    <string name="dollar_rate">美元汇率</string>
    <string name="won_rate">韩元汇率</string>
    <string name="euro_rate">欧元汇率</string>
    <string name="back">back</string>
    <string name="tip">外汇兑人民币</string>
    <string name="itemdetail">ItemDetail</string>
    <string name="itemTitle">ItemTitle</string>
    <string name="no_data">NO DATA</string>
</resources>